# imagegridviewer

./: .gitignore  FOSS-BOM.md  LICENSE  README.md  igridvu.py  igridvu_suffix.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  test_igridvu.py
docs/: c4_model.dsl  code_cli.puml  code_config.puml  code_create_examples.puml  code_main_window.puml  code_suffix_editor.puml  code_zoomable_view.puml
scripts/: clean.sh  create_example_images.py  generate_bom.py  setup_and_run.sh
src/igridvu/: __init__.py  cli.py  config.py  create_examples.py  main_window.py  suffix_editor.py  zoomable_view.py
tests/: conftest.py  test_cli.py  test_create_examples.py  test_igridvu.py  test_main_window.py  test_suffix_editor.py  test_zoomable_view.py
