[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imagegridviewer"
version = "0.1.0"
authors = [
  { name="Davoud Shahlaei", email="davoud.shahlaei@gmail.com" },
]
description = "A lightweight, Python-based desktop tool for displaying a grid of images with synchronized zoom and pan."
readme = "README.md"
requires-python = ">=3.6"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PySide6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
]

[project.scripts]
igridvu = "igridvu.cli:main"

[project.urls]
Homepage = "https://github.com/Dav0ud/imagegridviewer"
"Bug Tracker" = "https://github.com/Dav0ud/imagegridviewer/issues"